Fixed layout issues on role page in desktop version

--- a/src/app/role/styles.module.css
+++ b/src/app/role/styles.module.css
@@ -1,6 +1,5 @@
 .page {
     position: relative;
-    max-width: 400px;
     margin: 0 auto;
 }
 
@@ -36,6 +35,12 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+}
+
+.formBody {
+    padding: 16px;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
 .basicPrivileges {
